# py-pde

./: .gitattributes  .gitignore  .isort.cfg  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  TODO.md  allen_cahn.avi  allen_cahn.hdf  ast_docstring_signature_mismatches.json  codecov.yml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_output.txt  upload_to_pypi.sh
.github/: copilot-instructions.md
.github/workflows/: check_docs.yml  codeql-analysis.yml  coverage_report.yml  python_tests.yml  pythonpackage.yml  release_pip.yml  tests_all.yml  tests_minversion.yml  tests_mpi.yml  tests_types.yml
docs/: Makefile  TODO.md  build_all.sh  requirements.txt
docs/methods/: common.tex
docs/paper/: paper.bib  paper.md
docs/source/: .gitignore  conf.py  create_performance_plots.py  create_performance_plots_ops.py  create_performance_plots_pde.py  doc_replacements.txt  gallery.rst  getting_started.rst  index.rst  installation.rst  parse_examples.py  run_autodoc.py  sphinx_simplify_typehints.py
docs/sphinx_ext/: package_config.py  simplify_typehints.py  toctree_filter.py
examples/: README.txt  analyze_scalar_field.py  boundary_conditions.py  cartesian_grid.py  coupled_pde.py  custom_noise.py  custom_pde.py  custom_pde_1d.py  custom_pde_brusselator.py  custom_pde_coupled.py  custom_pde_sir.py  heterogeneous_bcs.py  laplace_eq_2d.py  make_movie.py  make_movie_storage.py  mpi_parallel_run.py  pde_1d.py  pde_1d_class.py  pde_1d_expression.py  pde_brusselator.py  pde_brusselator_class.py  pde_brusselator_expression.py  pde_coupled.py  pde_custom_class.py  pde_custom_expression.py  pde_custom_numba.py  pde_heterogeneous_diffusion.py  pde_schroedinger.py  pde_sir.py  plot_cylindrical_field.py  plot_vector_field.py  poisson_eq_1d.py  post_step_hook.py  post_step_hook_class.py  py_modelrunner.py  show_3d_field_interactively.py  simple.py  solver_comparison.py  spherical_grid.py  stochastic_simulation.py  (+5 more)
examples/advanced_pdes/: README.txt  custom_noise.py  heterogeneous_bcs.py  heterogeneous_pde.py  mpi_parallel_run.py  pde_brusselator_class.py  pde_brusselator_rd_pde.py  pde_coupled.py  pde_custom_numba.py  pde_sir.py  post_step_hook.py  post_step_hook_class.py  solver_comparison.py  stratonovich.py
examples/fields/: README.txt  finite_differences.py  plot_polar_grid.py  random_fields.py  show_3d_field_interactively.py
examples/jupyter/: .gitignore  Different solvers.ipynb  Discretized Fields.ipynb  Fields.ipynb  PDEs.ipynb  Solve PDEs.ipynb  Tutorial 1 - Grids and fields.ipynb  Tutorial 2 - Solving pre-defined partial differential equations.ipynb  _Tensors.ipynb
examples/output/: README.txt  logarithmic_kymograph.py  make_movie_live.py  py_modelrunner.py  storages.py  trajectory_io.py
examples/simple_pdes/: README.txt  cartesian_grid.py  klein_gordon.py  laplace_eq_2d.py  pde_brusselator_expression.py  pde_custom_expression.py  pde_heterogeneous_diffusion.py  pde_schroedinger.py  spherical_grid.py  stochastic_simulation.py  time_dependent_bcs.py
examples/tutorial/: Tutorial 1 - Grids and fields.ipynb  Tutorial 2 - Solving pre-defined partial differential equations.ipynb
pde/: __init__.py  _version.py  analysis.py  common.py  conftest.py  controller.py  py.typed  version.py
pde/backends/: __init__.py  base.py  numpy.py  registry.py
pde/fields/: __init__.py  base.py  collection.py  datafield_base.py  scalar.py  state.py  tensorial.py  vectorial.py
pde/grids/: __init__.py  _mesh.py  base.py  cartesian.py  cylindrical.py  mesh.py  spherical.py
pde/pdes/: __init__.py  allen_cahn.py  base.py  cahn_hilliard.py  diffusion.py  klein_gordon.py  kpz_interface.py  kuramoto_sivashinsky.py  laplace.py  pde.py  reaction_diffusion.py  swift_hohenberg.py  wave.py
pde/solvers/: __init__.py  adams_bashforth.py  base.py  controller.py  crank_nicolson.py  euler.py  explicit.py  explicit_mpi.py  implicit.py  milstein.py  runge_kutta.py  scipy.py
pde/storage/: __init__.py  _ffmpeg.py  base.py  file.py  memory.py  modelrunner.py  movie.py
pde/tests/: test_analysis.py  test_examples.py  test_integration.py
pde/tools/: __init__.py  cache.py  config.py  cuboid.py  docstrings.py  expressions.py  ffmpeg.py  math.py  misc.py  modelrunner.py  mpi.py  nested_dict.py  numba.py  output.py  parameters.py  parse_duration.py  plotting.py  spectral.py  spherical.py  typing.py
pde/trackers/: __init__.py  base.py  interactive.py  interrupts.py  intervals.py  trackers.py
pde/visualization/: __init__.py  contexts.py  movies.py  plotting.py
scripts/: create_requirements.py  create_storage_test_resources.py  format_code.sh  get_reserved_sympy_symbols.py  performance_boundaries.py  performance_laplace.py  performance_solvers.py  profile_import.py  requirements.txt  run_tests.py  show_environment.py  tests_codestyle.sh  tests_coverage.sh  tests_debug.sh  tests_extensive.sh  tests_mpi.sh  tests_parallel.sh  tests_types.sh  upload_to_pypi.sh
scripts/_templates/: _pyproject.toml  pyproject.toml
scripts/templates/: pyproject.toml  runtime.txt  setup.py
tests/: .coveragerc  codecov.yml  codestyle.sh  conftest.py  format_code.sh  mypy.ini  performance_boundaries.py  performance_laplace.py  performance_solvers.py  profile_import.py  pytest.ini  requirements.txt  requirements_full.txt  requirements_min.txt  requirements_mpi.txt  run_tests.py  show_environment.py  test.py  test_examples.py  test_integration.py  tests_all.sh  tests_codestyle.sh  tests_coverage.sh  tests_debug.sh  tests_mpi.sh  tests_parallel.sh  tests_run.sh  tests_types.sh
tests/_notebooks/: Test PlotTracker for different backend.ipynb
tests/backends/: test_backends.py
tests/fields/: test_field_collections.py  test_generic_fields.py  test_scalar_fields.py  test_tensorial_fields.py  test_vectorial_fields.py
tests/grids/: test_cartesian_grids.py  test_coordinates.py  test_cylindrical_grids.py  test_generic_grids.py  test_grid_mesh.py  test_spherical_grids.py
tests/notebooks/: Test PlotTracker for different backend.ipynb
(+288 files in other folders)
