# THIS FILE IS CREATED AUTOMATICALLY AND ALL MANUAL CHANGES WILL BE OVERWRITTEN
# If you want to adjust settings in this file, change scripts/_templates/_pyproject.toml

[project]
name = "py-pde"
description = "Python package for solving partial differential equations"
authors = [
    {name = "David Zwicker", email="david.zwicker@ds.mpg.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dynamic = ["version"]

keywords = ["pdes", "partial-differential-equations", "dynamical-systems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# Requirements for setuptools
dependencies = ["matplotlib>=3.1", "numba>=0.59", "numpy>=1.22", "scipy>=1.10", "sympy>=1.9", "tqdm>=4.66"]

[project.optional-dependencies]
io = ["h5py>=2.10", "pandas>=2", "ffmpeg-python>=0.2"]
interactive = ["napari>=0.4.8", "ipywidgets>=8"]
mpi = ["numba-mpi>=0.22", "mpi4py>=3"]

[project.urls]
homepage = "https://github.com/zwicker-group/py-pde"
documentation = "http://py-pde.readthedocs.io"
repository = "https://github.com/zwicker-group/py-pde"

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false  # required for mypy to find the py.typed file

[tool.setuptools.packages.find]
include = ["pde*"]
namespaces = false

[tool.setuptools_scm]
write_to = "pde/_version.py"

[tool.ruff]
target-version = "py310"
exclude = ["scripts/templates"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins 
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "F",  # py-flakes
    "FA", # flake8-future-annotations
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I",  # isort
    "ICN", # flake8-import-conventions
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "NPY", # numpy rules
    "PD", # pandas-vet 
    "PERF", # Perflint 
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi 
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # general fixes by ruff
    "SIM", # flake8-simplify
    "SLOT", # flake8-slots
    "TC", # flake8-type-checking
    "TRY", # tryceratops 
    "UP",  # pyupgrade
    "W", # pycodestyle warnings
]
ignore = [
    "A005",  # allow module names that shadow python built-ins
    "B007",  # this check seems wrong since the loop variable could be used outside loop
    "B027",  # allow empty methods
    "E402",  # allow Module level import not at top of file
    "PT011",  # allow broad exceptions
    "RET504",  # cannot use this because of numba
    "RUF001",  # allow single greek letters
    "RUF002",  # allow using prime in docstrings
    "RUF012",  # allow using mixture of class and instance variables
    "SIM108",  # don't use ternary operator too much
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "self", "local-folder"]

[tool.ruff.lint.isort.sections]
self = ["pde", "fixtures"]

[tool.black]
target_version = ["py310"]
exclude = "scripts/templates"

[tool.isort]
profile = "black"
src_paths = ["pde", "examples", "scripts", "tests"]
known_self = ["pde", "fixtures"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "SELF", "LOCALFOLDER"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
filterwarnings = [
    'ignore:.*importing the ABCs from.*:DeprecationWarning',
    'ignore:.*IPython.utils.signatures backport for Python 2 is deprecated.*:DeprecationWarning',
    'ignore:.*scipy.sparse.*:DeprecationWarning',
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "numba.*"
ignore_missing_imports = true
ignore_errors = false
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = [
    "ffmpeg.*",
    "h5py.*",
    "IPython.*",
    "ipywidgets.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "mpi4py.*",
    "napari.*",
    "numba_mpi.*",
    "numpy.*",
    "pandas.*",
    "pyfftw.*",
    "pytest.*",
    "qtpy.*",
    "scipy.*",
    "sympy.*",
    "tqdm.*",
]
ignore_missing_imports = true
